--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/CreateEditPermission.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/CreateEditPermission.cshtml
@@ -32,6 +32,7 @@
             <label for="Group">Description:</label>
             <input type="text" class="form-control" asp-for="Description">
         </div>
+        <input type ="hidden" asp-for="Id" value="@Model.Id"/>
     </div>
 
     <h4>Select Module Menus</h4>
