--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -20,43 +20,72 @@
     </head>
 
     <body id="body">
-        
-        <!-- Container for showing global messages. -->
+        <!--MessageContainer-->
+        <div class="row">
+            <div id="messageContainer">
+                @if (TempData.ContainsKey("SuccessMessage") || ViewBag.SuccessMessage != null)
+                {
+                    <div class="alert alert-success alert-dismissable">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                        @Html.Raw(TempData["SuccessMessage"])@Html.Raw(ViewBag.SuccessMessage)
+                    </div>
+                }
+                @if (TempData.ContainsKey("InfoMessage") || ViewBag.InfoMessage != null)
+                {
+                    <div class="alert alert-info alert-dismissable">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                        @Html.Raw(TempData["InfoMessage"])@Html.Raw(ViewBag.InfoMessage)
+                    </div>
+                }
+                @if (TempData.ContainsKey("WarningMessage") || ViewBag.WarningMessage != null)
+                {
+                    <div class="alert alert-warning alert-dismissable">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                        @Html.Raw(TempData["WarningMessage"]) @Html.Raw(ViewBag.WarningMessage)
+                    </div>
+                }
+                @if (TempData.ContainsKey("ErrorMessage") || ViewBag.ErrorMessage != null)
+                {
+                    <div class="alert alert-danger alert-dismissable">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                        @Html.Raw(TempData["ErrorMessage"])@Html.Raw(ViewBag.ErrorMessage)
+                    </div>
+                }
+            </div>
+        </div>
+        <!--GlobalMessages-->
         <div class="row">
             @NccRenderGlobalMessages()
         </div>
-        <!-- Loading -->
+        <!--Loading-->
         @NccRenderLoadingMaskContainer()
-        <!-- Header -->
+        <!--Header-->
         @NccRenderHeader()
-
-        <!-- Navbar -->
+        <!--Navbar-->
         @NccRenderNavigation()
-        <!-- Zone TOP End-->
-
-        <!--  Main Body Start -->
+        <!--ZoneTOPEnd-->
+        <!--MainBody-->
         <div class="container mainBody">   
-            <!-- Left Column start -->
+            <!--LeftColumn-->
             @NccRenderLeftColumn()
-            <!-- Left Column end -->
-
-            <!-- Right Column start -->
+            <!--LeftColumn-->
+            <!--RightColumn-->
             @NccRenderRightColumn()
-            <!-- Right Column end -->
+            <!--RightColumn-->
 
-            <!-- Main content Start -->
+            <!--Maincontent-->
             <div class="col-md-@BodyWidth">
-                <!-- Featured -->
+                <!--Featured-->
                 @NccRenderFeaturedSection()
                 @NccRenderBody()
             </div>
-            <!-- Main content End -->
+            <!--MainContent-->
         </div>
-        <!--  Main Body End -->
+        <!--MainBody-->
 
-        <!--  Footer Start -->
+        <!--FooterStart-->
         @NccRenderFooter()
-        <!--  Footer End -->
+        <!--FooterEnd-->
 
         @NccRenderFooterCss()
         @NccRenderFooterScripts()
