--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_NoTopLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_NoTopLayout.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
     CurrentLayout = "NoTopLayout";
-    CurrentLanguage = ThemeHelper.GetCurrentLanguage();    
 }
 
 <!DOCTYPE html>
@@ -16,32 +15,65 @@
     @RenderSection("Styles", required: false)
 </head>
 <body id="body">
-    <!-- Container for showing global messages. -->
+    <!--MessageContainer-->
+    <div class="row">
+        <div id="messageContainer">
+            @if (TempData.ContainsKey("SuccessMessage") || ViewBag.SuccessMessage != null)
+            {
+                <div class="alert alert-success alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    @Html.Raw(TempData["SuccessMessage"])@Html.Raw(ViewBag.SuccessMessage)
+                </div>
+            }
+            @if (TempData.ContainsKey("InfoMessage") || ViewBag.InfoMessage != null)
+            {
+                <div class="alert alert-info alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    @Html.Raw(TempData["InfoMessage"])@Html.Raw(ViewBag.InfoMessage)
+                </div>
+            }
+            @if (TempData.ContainsKey("WarningMessage") || ViewBag.WarningMessage != null)
+            {
+                <div class="alert alert-warning alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    @Html.Raw(TempData["WarningMessage"]) @Html.Raw(ViewBag.WarningMessage)
+                </div>
+            }
+            @if (TempData.ContainsKey("ErrorMessage") || ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-danger alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    @Html.Raw(TempData["ErrorMessage"])@Html.Raw(ViewBag.ErrorMessage)
+                </div>
+            }
+        </div>
+    </div>
+    <!--GlobalMessages-->
     @NccRenderGlobalMessages()
-    <!-- Loading -->
+    <!--Loading-->
     @NccRenderLoadingMaskContainer()
-    <!-- Navbar -->
+    <!--Navbar-->
     @NccRenderNavigation("Parts/_NavigationNoTop")
-    <!-- Featured -->
+    <!--Featured-->
     @NccRenderFeaturedSection("Parts/_FullWidthSlider")
 
-    <!--  Main Body Start -->
+    <!--MainBody-->
     <div class="container mainBody">
-        <!-- Left Column -->
+        <!--LeftColumn-->
         @NccRenderLeftColumn()
 
-        <!-- Right Column -->
+        <!--RightColumn-->
         @NccRenderRightColumn()
 
-        <!-- Main content -->
+        <!--Maincontent-->
         <div class="col-md-@BodyWidth">
-            <!-- Featured -->
+            <!--Featured-->
             @NccRenderFeaturedSection() 
             @NccRenderBody()
         </div>
     </div>
 
-    <!--  Footer -->
+    <!--Footer-->
     @NccRenderFooter()
     @NccRenderFooterCss()
     @NccRenderFooterScripts()
