--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -50,32 +50,32 @@
     <div id="wrapper">
         <div class="row">
             <div id="messageContainer">
-                @if (TempData.ContainsKey("SuccessMessage") || ViewBag.MessageType == "SuccessMessage")
+                @if (TempData.ContainsKey("SuccessMessage") || ViewBag.SuccessMessage != null)
                 {
                     <div class="alert alert-success alert-dismissable">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        @Html.Raw(TempData["SuccessMessage"])@Html.Raw(ViewBag.Message)<a href="#" class="alert-link"></a>.
+                        @Html.Raw(TempData["SuccessMessage"])@Html.Raw(ViewBag.SuccessMessage)
                     </div>
                 }
-                @if (TempData.ContainsKey("InfoMessage") || ViewBag.MessageType == "InfoMessage")
+                @if (TempData.ContainsKey("InfoMessage") || ViewBag.InfoMessage != null)
                 {
                     <div class="alert alert-info alert-dismissable">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        @Html.Raw(TempData["InfoMessage"])<a href="#" class="alert-link"></a>.
+                        @Html.Raw(TempData["InfoMessage"])@Html.Raw(ViewBag.InfoMessage)
                     </div>
                 }
-                @if (TempData.ContainsKey("WarningMessage") || ViewBag.MessageType == "WarningMessage")
+                @if (TempData.ContainsKey("WarningMessage") || ViewBag.WarningMessage != null)
                 {
                     <div class="alert alert-warning alert-dismissable">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        @Html.Raw(TempData["WarningMessage"])<a href="#" class="alert-link"></a>.
+                        @Html.Raw(TempData["WarningMessage"]) @Html.Raw(ViewBag.WarningMessage)
                     </div>
                 }
-                @if (TempData.ContainsKey("ErrorMessage") || ViewBag.MessageType == "ErrorMessage")
+                @if (TempData.ContainsKey("ErrorMessage") || ViewBag.ErrorMessage != null)
                 {
                     <div class="alert alert-danger alert-dismissable">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        @Html.Raw(TempData["ErrorMessage"])@Html.Raw(ViewBag.Message)<a href="#" class="alert-link"></a>.
+                        @Html.Raw(TempData["ErrorMessage"])@Html.Raw(ViewBag.ErrorMessage)
                     </div>
                 }
             </div>
