Some other extra properties have been added into ThemeSection.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/UserAuth/CreateEditRoles.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/UserAuth/CreateEditRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@using NetCoreCMS.Modules.Cms.Models.ViewModels.UserAuthViewModels
+﻿@using NetCoreCMS.Modules.Admin.Models.ViewModels.UserAuthViewModels
 
 @model PermissionViewModel
 
