--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/UserAuth/ManageUserRoles.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/UserAuth/ManageUserRoles.cshtml
@@ -1,13 +1,13 @@
-﻿@using NetCoreCMS.Modules.Cms.Models.ViewModels.UserAuthViewModels
+﻿@using NetCoreCMS.Modules.Admin.Models.ViewModels.UserAuthViewModels
 @model List<PermissionViewModel>
 
-@{ 
-    ViewData["Title"] = "Permission Templates";
-    ViewData["PageTitle"] = "Permission Template.";
+@{
+    ViewData["Title"] = "Manage User Roles";
+    ViewData["PageTitle"] = "Manage User Roles.";
     Layout = Constants.AdminLayoutName;
     var index = 1;
 }
-<a href="/UserAuth/CreateEditPermission" class="btn btn-primary">Create New</a>
+<a href="/UserAuth/CreateEditRoles" class="btn btn-primary">Create New</a>
 <table class="table table-striped">
     <tr>
         <th>SN:</th><th>Name</th><th>Group</th><th>Description</th><th>Contains</th><th>Users</th><th>Action</th>
@@ -21,7 +21,7 @@
             <td>@item.Description</td>
             <td>Module(@item.ModuleCount), Menu(@item.MenuCount)</td>
             <td>User(@item.UserCount)</td>
-            <td><a href="/UserAuth/CreateEditPermission/?permissionId=@item.Id">Edit </a> | <a href="/UserAuth/DeletePermission/?permissionId=@item.Id">Delete</a></td>
+            <td><a href="/UserAuth/CreateEditRoles/?roleId=@item.Id">Edit </a> | <a href="/UserAuth/DeleteRole/?roleId=@item.Id">Delete</a></td>
         </tr>
 
         index++;
