--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
@@ -9,7 +9,7 @@
 @using NetCoreCMS.Framework.Core.Mvc.Views.TagHelpers
 @using NetCoreCMS.Framework.Core.Mvc.Views
 @using NetCoreCMS.Framework.Core.Mvc.Attributes
-
+@using NetCoreCMS.Framework.Modules
 
 @using NetCoreCMS.Framework.i18n
 
