--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/_Comments.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/_Comments.cshtml
@@ -1,5 +1,4 @@
-﻿<!--CommentsSection-->
-@inject UserManager<NccUser> UserManager
+﻿@inject UserManager<NccUser> UserManager
 @{ 
     long UserId = 0;
     string UserName = "";
@@ -161,5 +160,3 @@
         });
     }
 </script>
-
-<!--CommentsSection-->
