--- a/NetCoreCMS.Web/Modules/NetCoreCMS.Subscription/Views/SubscriptionHome/Index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.Subscription/Views/SubscriptionHome/Index.cshtml
@@ -20,10 +20,10 @@
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
-                            <th class="text-center">Name</th>
+                            @*<th class="text-center">Name</th>*@
                             <th class="text-center">Email</th>
-                            <th class="text-center">Mobile</th>
-                            <th class="text-center">Remarks</th>
+                            @*<th class="text-center">Mobile</th>*@
+                            @*<th class="text-center">Remarks</th>*@
                             <th class="text-center">Creation Date</th>
                             <th class="text-center">Action</th>
                         </tr>
@@ -31,11 +31,11 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>@item.Name</td>
+                            <tr class="text-center">
+                                @*<td>@item.Name</td>*@
                                 <td>@item.Email</td>
-                                <td>@item.Mobile</td>                                
-                                <td>@item.Remarks</td>
+                                @*<td>@item.Mobile</td>*@                                
+                                @*<td>@item.Remarks</td>*@
                                 <td>@item.CreationDate</td>
                                 <td>
                                     <a asp-controller="@controllerName" asp-action="SendEmail" asp-route-id="@item.Id" class="btn btn-xs btn-info">Send Email</a>
