--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Users/CreateEdit.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Users/CreateEdit.cshtml
@@ -56,7 +56,7 @@
             <div class="form-group">
                 <div class="col-sm-2  text-right"><label>Role: </label></div>
                 <div class="col-sm-6">
-                    <select asp-for="Role" asp-items="@UserViewModel.GetRolesDropdown()"  class="form-control">
+                    <select asp-for="Roles" asp-items="@ViewBag.Roles" multiple="multiple"  class="form-control">
                         <option>Select Role</option>
                     </select>
                 </div>
@@ -76,18 +76,19 @@
             </div>
 
             <div class="container">
+                <input type="hidden" asp-for="PermissionId" value="@Model.PermissionId" />
                 <div class="panel-group" id="accordion">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                                    Deny extra menu permission
+                                    Deny menu permission
                                 </a>
                             </h4>
                         </div>
                         <div id="collapse1" class="panel-collapse collapse in">
                             <div class="panel-body">
-                                <h4>Select Module Menus</h4>
+                                <h5>Select Module Menus</h5>
                                 <div class="menu">
 
                                     @for (var i = 0; i < modules.Count; i++)
@@ -278,7 +279,7 @@
                         </div>
                         <div id="collapse2" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <h4>Select Module Menus</h4>
+                                <h5>Select Module Menus</h5>
                                 <div class="menu">
 
                                     @for (var i = 0; i < modules.Count; i++)
