--- a/NetCoreCMS.Web/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Views/SetupHome/Index.cshtml
@@ -54,7 +54,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="DatabasePassword">Database Password:</label>
             <div class="col-sm-10">
-                <input asp-for="DatabasePassword" type="text" class="form-control" id="DatabasePassword" name="DatabasePassword" placeholder="Enter Database Password">
+                <input asp-for="DatabasePassword" type="password" class="form-control" id="DatabasePassword" name="DatabasePassword" placeholder="Enter Database Password">
                 <span asp-validation-for="DatabasePassword" class="text-danger"></span>
             </div>
         </div>
