--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewStart.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewStart.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @{
-    Layout = Constants.SiteLayoutName;    
+    Layout = Constants.SiteLayoutName;
+    ViewData["Title"] = "CMS";
 }
