improved user creation and permission assign/update.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Users/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Users/Index.cshtml
@@ -64,5 +64,5 @@
     </div>    
 </div>
 
-<script src="~/NetCoreCms.Modules.Admin/js/NccUsers.js"></script>
+<script src="~/NetCoreCms.Modules.Admin/js/NccUsers.js" asp-append-version="true"></script>
      
