--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
@@ -6,7 +6,7 @@
 }
  
 <!DOCTYPE html>
-<html>
+<html lang="@CurrentLanguage">
     <head>
         @NccRenderHead()
         @Html.Raw(JavaScriptSnippet.FullScript)
