--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_LoginLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_LoginLayout.cshtml
@@ -4,7 +4,7 @@
 }
 
 <!DOCTYPE html>
-<html>
+<html lang="@CurrentLanguage">
 <head>
     @NccRenderHead()
     @Html.Raw(JavaScriptSnippet.FullScript)
