--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_SiteLayout.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!DOCTYPE html>
-<html>
+<html lang="@CurrentLanguage">
 <head>
     @NccRenderHead()
     @Html.Raw(JavaScriptSnippet.FullScript)
