recent comments widget added

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/Index.cshtml
@@ -82,10 +82,38 @@
                             }
                             <p>@Html.Raw(content) ...<a href="/Post/@postDetails.Slug">@_T["More"]</a></p>
                         }
-                    </div>                    
+                    </div>
                 </div>
                 <br />
+                                }
+                            }
+    </div>
+    <div class="col-md-12">
+        @{
+            float floatPage = (float)ViewBag.TotalPost / (float)ViewBag.PostPerPage;
+            int totalPage = (int)(ViewBag.TotalPost / ViewBag.PostPerPage);
+            if (ViewBag.CurrentPage > totalPage && floatPage != totalPage)
+            {
+                ViewBag.CurrentPage = totalPage + 1;
             }
+            else if (ViewBag.CurrentPage > totalPage) {
+                ViewBag.CurrentPage = totalPage;
+            }
+
+            if (floatPage == totalPage)
+            {
+                totalPage = totalPage - 1;
+            }
+        }        
+        @*<span>@floatPage</span>
+        <span>@totalPage</span>*@
+        @if (ViewBag.CurrentPage > 0)
+        {
+            <div class="pull-left"><a href="/Post/?page=@(ViewBag.CurrentPage-1)">< @_T["Previous"]</a></div>
+        }
+        @if (ViewBag.CurrentPage < totalPage)
+        {
+            <div class="pull-right"><a href="/Post/?page=@(ViewBag.CurrentPage+1)">@_T["Next"] ></a></div>
         }
     </div>
 </div>
